<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="512dp"
        android:isScrollContainer="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="192dp"
            android:layout_height="168dp"
            android:contentDescription="@string/quesadilla"
            app:srcCompat="@drawable/quesadillas" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="192dp"
            android:layout_height="168dp"
            android:contentDescription="@string/birria"
            app:srcCompat="@drawable/birria" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="192dp"
            android:layout_height="168dp"
            android:contentDescription="@string/sandwich"
            app:srcCompat="@drawable/sandwich" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="197dp"
        android:layout_height="513dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="192dp"
            android:layout_height="168dp"
            android:contentDescription="@string/tamal"
            app:srcCompat="@drawable/tamal" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="192dp"
            android:layout_height="168dp"
            android:contentDescription="@string/hamburguesa"
            app:srcCompat="@drawable/hamburguesa" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="192dp"
            android:layout_height="168dp"
            android:contentDescription="@string/taco"
            app:srcCompat="@drawable/tacos" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>